Process configuration classes have been updated
