# src/main/java/eu/nimble/service/bp/processor/orderresponse/DefaultOrderResponseSender.java
@@ -3,8 +3,9 @@ package eu.nimble.service.bp.processor.orderresponse;
 import com.netflix.hystrix.contrib.javanica.annotation.HystrixCommand;
 import eu.nimble.service.bp.application.IBusinessProcessApplication;
 import eu.nimble.service.bp.impl.util.persistence.DocumentDAOUtility;
-import eu.nimble.service.bp.swagger.model.ApplicationConfiguration;
+
 import eu.nimble.service.bp.swagger.model.ExecutionConfiguration;
+import eu.nimble.service.bp.swagger.model.ProcessConfiguration;
 import eu.nimble.service.model.ubl.order.OrderType;
 import eu.nimble.service.model.ubl.orderresponsesimple.OrderResponseSimpleType;
 import org.camunda.bpm.engine.delegate.DelegateExecution;
@@ -42,9 +43,9 @@ public class DefaultOrderResponseSender  implements JavaDelegate {
 
         // get application execution configuration
         ExecutionConfiguration executionConfiguration = DocumentDAOUtility.getExecutionConfiguration(seller,
-                execution.getProcessInstance().getProcessDefinitionId(),
-                ApplicationConfiguration.ApplicationTypeEnum.DATACHANNEL);
-        String applicationURI = executionConfiguration.getURI();
+                execution.getProcessInstance().getProcessDefinitionId(), ProcessConfiguration.RoleTypeEnum.SELLER, "ORDERRESPONSE",
+                ExecutionConfiguration.ApplicationTypeEnum.DATACHANNEL);
+        String applicationURI = executionConfiguration.getExecutionUri();
         ExecutionConfiguration.ExecutionTypeEnum executionType = executionConfiguration.getExecutionType();
 
         // Call that configured application with the variables
